--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "bitcoin-live-transactions": "*",
+    "bitcoinjs-lib": "^5.0.5",
     "bitcore-lib": "^8.3.4",
     "debug": "^4.1.1",
     "money": "^0.2.0",
